Fix inconsistent popup element IDs

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <!-- Meeting Pop-up: appears next to the main widget in scheduling mode -->
-    <div id="meetingPopup" class="meeting-popup">
-      <button id="scheduleMeetingBtn" class="global-toggle">Schedule Meeting</button>
-      <button id="addToCalendarBtn" class="global-toggle">Add to Calendar</button>
+    <div id="schedulingPopup" class="meeting-popup">
+      <button id="scheduleMeetingButton" class="global-toggle">Schedule Meeting</button>
+      <button id="addToCalendarButton" class="global-toggle">Add to Calendar</button>
     </div>
 
     <!-- Grid Container for Comparison Widgets (3×2 grid) -->
