--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
       <div class="settings-section">
         <h3>Background</h3>
         <div id="backgroundOptions" class="background-options">
-          <img class="bg-preview" data-bg="images/background1.jpg" src="images/background1.jpg" alt="Background 1">
-          <img class="bg-preview" data-bg="images/background2.jpg" src="images/background2.jpg" alt="Background 2">
-          <img class="bg-preview" data-bg="images/background3.jpg" src="images/background3.jpg" alt="Background 3">
-          <img class="bg-preview" data-bg="images/background4.jpg" src="images/background4.jpg" alt="Background 4">
-          <img class="bg-preview" data-bg="images/background5.jpg" src="images/background5.jpg" alt="Background 5">
-          <img class="bg-preview" data-bg="images/background6.jpg" src="images/background6.jpg" alt="Background 6">
+          <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
+          <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
+          <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
+          <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
+          <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
+          <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
         </div>
       </div>
       <div class="settings-section">
