--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
   <!-- Country Modal -->
   <div id="countryModal" class="modal">
     <div class="modal-content">
-      <span id="closeModal" class="close">&times;</span>
-      <input type="text" id="countrySearch" placeholder="Search for a country..." />
+      <div class="search-container">
+        <input type="text" id="countrySearch" placeholder="Search for a country..." />
+        <button id="clearSearch" class="clear-btn">Clear</button>
+        <span id="closeModal" class="close">&times;</span>
+      </div>
       <div id="countryList"></div>
     </div>
   </div>
@@ -58,13 +61,17 @@
       <h2>Settings</h2>
       <div class="settings-section">
         <h3>Background</h3>
-        <div id="backgroundOptions" class="background-options">
-          <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
-          <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
-          <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
-          <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
-          <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
-          <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
+        <div class="background-slider">
+          <button id="bgPrev" class="slide-btn">&#9664;</button>
+          <div id="backgroundOptions" class="background-options">
+            <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
+            <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
+            <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
+            <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
+            <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
+            <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
+          </div>
+          <button id="bgNext" class="slide-btn">&#9654;</button>
         </div>
       </div>
       <div class="settings-section">
