--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <a id="versionLink" href="#">See what's new</a>
+  <button id="versionLink" class="version-button">See what's new</button>
   <!-- Top Right Controls (No hour toggle here) -->
   <div id="topControls">
     <button id="scheduleButton" class="schedule-button">Schedule</button>
