Revamp settings background and clarify format

--- a/index.html
+++ b/index.html
@@ -62,23 +62,19 @@
       <h2>Settings</h2>
       <div class="settings-section">
         <h3>Background</h3>
-        <div class="background-slider">
-          <button id="bgPrev" class="slide-btn">&#9664;</button>
-          <div id="backgroundOptions" class="background-options">
-            <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
-            <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
-            <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
-            <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
-            <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
-            <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
-          </div>
-          <button id="bgNext" class="slide-btn">&#9654;</button>
+        <div id="backgroundGrid" class="background-grid">
+          <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
+          <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
+          <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
+          <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
+          <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
+          <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
         </div>
       </div>
       <div class="settings-section">
-        <h3>Hours Format</h3>
+        <h3>Clock Format</h3>
         <button id="hoursToggleBtn" class="global-toggle">
-          Toggle Hours: <span id="hoursToggleText">24h</span>
+          Format: <span id="hoursToggleText">24-hour</span>
         </button>
       </div>
     </div>
