--- a/index.html
+++ b/index.html
@@ -61,15 +61,12 @@
       <span id="closeSettings" class="close">&times;</span>
       <h2>Settings</h2>
       <div class="settings-section">
-        <h3>Background</h3>
-        <div id="backgroundGrid" class="background-grid">
-          <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
-          <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
-          <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
-          <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
-          <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
-          <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
-        </div>
+        <h3>Theme</h3>
+        <button id="themeToggleBtn" class="global-toggle">System</button>
+      </div>
+      <div class="settings-section">
+        <h3>Transparent Widgets</h3>
+        <button id="transparentToggleBtn" class="global-toggle">Off</button>
       </div>
       <div class="settings-section">
         <h3>Clock Format</h3>
