--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
       <span id="closeSettings" class="close">&times;</span>
       <h2>Settings</h2>
       <div class="settings-section">
-        <h3>Background</h3>
-        <div id="backgroundGrid" class="background-grid">
-          <img class="bg-preview" data-bg="Images/background1.jpg" src="Images/background1.jpg" alt="Background 1">
-          <img class="bg-preview" data-bg="Images/background2.jpg" src="Images/background2.jpg" alt="Background 2">
-          <img class="bg-preview" data-bg="Images/background3.jpg" src="Images/background3.jpg" alt="Background 3">
-          <img class="bg-preview" data-bg="Images/background4.jpg" src="Images/background4.jpg" alt="Background 4">
-          <img class="bg-preview" data-bg="Images/background5.jpg" src="Images/background5.jpg" alt="Background 5">
-          <img class="bg-preview" data-bg="Images/background6.jpg" src="Images/background6.jpg" alt="Background 6">
+        <h3>Theme</h3>
+        <div id="themeOptions" class="theme-options">
+          <label><input type="radio" name="theme" value="system"> System</label>
+          <label><input type="radio" name="theme" value="light"> White</label>
+          <label><input type="radio" name="theme" value="dark"> Black</label>
         </div>
+      </div>
+      <div class="settings-section">
+        <label>
+          <input type="checkbox" id="transparentWidgets"> Transparent widget backgrounds
+        </label>
       </div>
       <div class="settings-section">
         <h3>Clock Format</h3>
