Add tabbed selector for countries and time zones

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
   <!-- Country Modal -->
   <div id="countryModal" class="modal">
     <div class="modal-content">
+      <div class="tab-container">
+        <button id="countriesTab" class="tab active">Countries</button>
+        <button id="zonesTab" class="tab">Time Zones</button>
+      </div>
       <div class="search-container">
-        <input type="text" id="countrySearch" placeholder="Search for a country..." />
+        <input type="text" id="countrySearch" placeholder="Search..." />
         <button id="clearSearch" class="clear-btn">Clear</button>
         <span id="closeModal" class="close">&times;</span>
       </div>
