--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
       </div>
       <div class="widget-actions">
         <!-- Change Time Zone button -->
-        <button id="changeMainTimeZone" class="globe-button circle-button">
-          <span class="material-icons" style="font-size:32px;"></span>
-        </button>
+        <button id="changeMainTimeZone" class="globe-button circle-button">🌐</button>
       </div>
     </div>
 
